--- a/BappDescription.html
+++ b/BappDescription.html
@@ -2,4 +2,4 @@
 
 <p>When used within Burp Suite, it provides automatic detection and in-line editing of JWTs within HTTP requests/responses, signing and encrypting of tokens and automation of several well-known attacks against JWT implementations.</p>
 
-<p>For more information on usage of this extension, check out the <a href="https://github.com/PortSwigger/jwt-editor">README on GitHub</a></p>
+<p>For more information on usage of this extension, check out the <a href="https://github.com/fransla/jwt-editor">README on GitHub</a></p>
